Envio de mail carpooling[parcial-falta]

--- a/CuandoTocan/CuandoTocan/Pages/SendMailA.htm
+++ b/CuandoTocan/CuandoTocan/Pages/SendMailA.htm
@@ -16,15 +16,15 @@
    </tr>
     <tr>
       <th>¡Y gracias por registrate a nuestra aplicación! Desde <span style="color:#22b573;font-size: 18px;">CuandoTocan</span> podrás:</th></tr>
-    <tr><th style="font-size:20px;font-weight: bold;">Buscar Eventos</th></tr>
-    <tr><th style="font-size:18px;">Encuentra eventos cerca tuyo</th></tr>
-   <tr><th style="font-size:12px;">Busca eventos por artista, zona, o lugar.</th></tr>
-    <tr><th style="font-size:20px;font-weight: bold;">Carpooling</th></tr>
-   <tr><th style="font-size:18px;">Contacta otros asistenes al evento</th></tr>
-   <tr><th style="font-size:12px;">Cuando decidas asistir a un evento, podrás compartir tu auto con otros usuarios, o contactar otros usuarios que asistan en auto al mismo evento</th></tr>
-    <tr><th  style="font-size:20px;font-weight: bold;">Organizate</th></tr>
-   <tr><th style="font-size:18px;">Que nunca más se te pase una fecha</th></tr>
-    <tr><th style="font-size:12px;">Desde la aplicacion, podrás indicar artistas que deseas seguir, de esta forma, podrás informarte de próximos recitales y lanzamientos en un solo click</th></tr>
+    <tr><th style="font-size:20px;font-weight: bold;">Crear Eventos</th></tr>
+    <tr><th style="font-size:18px;">Promociar tu banda</th></tr>
+   <tr><th style="font-size:12px;">Otros usuarios podrán ver tus eventos</th></tr>
+    <tr><th style="font-size:20px;font-weight: bold;">Generar Reportes</th></tr>
+   <tr><th style="font-size:18px;">Obtener datos estadísticos</th></tr>
+   <tr><th style="font-size:12px;">Prodrás generar reportes en base a seguidores como a asistentes de tus eventos</th></tr>
+    <tr><th  style="font-size:20px;font-weight: bold;">Good News</th></tr>
+   <tr><th style="font-size:18px;">Notificá a tus seguidos</th></tr>
+    <tr><th style="font-size:12px;">Desde la aplicacion, podrás informar a tus seguidos acerca de próximos lanzamientos (CD's/DVD's/Videoclip's, etc)</th></tr>
   <tr><th style="height:20px;background-color:#22b573;color:#FFFFFF;font-size:16px;font-weight: bold;" > <a href="http://localhost:63281/Home.aspx" style="color:#FFFFFF;text-decoration:none;"> Comenzar ahora</a></th></tr>
 </table>
   
