Registro de evento
Graba asistencia a evento en la base y dispara mails

--- a/CuandoTocan/CuandoTocan/Pages/SendMailEsinAuto.htm
+++ b/CuandoTocan/CuandoTocan/Pages/SendMailEsinAuto.htm
@@ -17,23 +17,14 @@
     <tr>
       <th style="width:600px" colspan="3">Los siguientes usarios ofrecieron su auto, podés contactarlos:</th></tr>
        <th style="height:10px;background-color:#FFFFFF;color:#FFFFFF;font-size:30px;font-weight: bold;" colspan="3"> </th>
-      <table style="text-align:center; margin-left:80px;style="text-align:center;Border:1px solid;"">
+      <!--<table style="text-align:center; margin-left:80px;style="text-align:center;Border:1px solid;"">-->
         <tr  style="width:600px;"  >
-          <th  style="text-align:center;">Usuario</th>
-          <th style="text-align:center;">Email</th>
-          <th style="text-align:center;">Desde</th>
+          <th>Usuario</th>
+          <th>Email</th>
+          <th>Desde</th>
         </tr>
-         <tr  style="width:600px;">
-          <td style="text-align:center;">Anabela</td>
-          <td style="text-align:center;">anabela.rossi@gmail.com</td>
-          <td style="text-align:center;">Gaeberler,765, Morón</td>
-        </tr>
-         <tr style="width:600px;">
-          <td style="text-align:center;">Pepe</td>
-          <td style="text-align:center;">pepe.rossi@gmail.com</td>
-          <td style="text-align:center;">Rivadavia,765, Flores</td>
-        </tr>
-        </table>
+        [MyTable]
+      <!--  </table>-->
 </table>
   
 </body>
