Envio de mails andando
Funciona OK envio de mails al dar baja o modificar un evento.

--- a/CuandoTocan/CuandoTocan/Pages/SendEmailEliEvento.htm
+++ b/CuandoTocan/CuandoTocan/Pages/SendEmailEliEvento.htm
@@ -18,7 +18,7 @@
       <th style="font-size:16px;">Lamentamos informarte que</th></tr>
     <tr><th style="font-size:18px;">el evento [MyEvent] del día [fecha] </th></tr>
    <tr><th style="font-size:16px;">al que ibas a asistir</th></tr>
-   <tr><th style="font-size:16px;">fue cancelado por el artista</th></tr>
+   <tr><th style="font-size:16px;">fue cancelado.</th></tr>
   <tr><th style="height:20px;background-color:#22b573;color:#FFFFFF;font-size:16px;font-weight: bold;" > <a href="http://localhost:63281/Home.aspx" style="color:#FFFFFF;text-decoration:none;"> CuandoTocan</a></th></tr>
 </table>
   
