--- a/CuandoTocan/CuandoTocan/Pages/SendMailModEvento.htm
+++ b/CuandoTocan/CuandoTocan/Pages/SendMailModEvento.htm
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Email</title>
@@ -19,17 +19,18 @@
        <th style="height:10px;background-color:#FFFFFF;color:#FFFFFF;font-size:30px;font-weight: bold;" colspan="3"> </th>
       <!--<table style="text-align:center; margin-left:80px;style="text-align:center;Border:1px solid;"">-->
         <tr  style="width:700px;"  >
-          <th style="text-align=left;">Evento</th>
-          <th style="text-align=left;">fecha</th>
-          <th style="text-align=left;">Lugar</th>
-          <th style="text-align=left;">Tipo</th>
+          <th style="text-align=left;">Evento: [MyEvent]</th>
+         </tr>
+         <tr  style="width:700px;"  >
+          <th style="text-align=left;">Fecha: [fecha]</th>
+          </tr>
+         <tr  style="width:700px;"  >
+          <th style="text-align=left;">Lugar: [lugar]</th>
+          </tr>
+         <tr  style="width:700px;"  >
+          <th style="text-align=left;">Tipo :[tipo]</th>
         </tr>
-       <tr  style="width:600px;"  >
-          <th style="text-align=left;">[MyEvent]</th>
-          <th style="text-align=left;">[fecha]</th>
-          <th style="text-align=left;">[lugar]</th>
-          <th style="text-align=left;">[tipo]</th>
-        </tr>
+       <tr><th style="height:20px;background-color:#22b573;color:#FFFFFF;font-size:16px;font-weight: bold;" > <a href="http://localhost:63281/Home.aspx" style="color:#FFFFFF;text-decoration:none;"> CuandoTocan</a></th></tr>
 </table>
   
 </body>
