--- a/CuandoTocan/CuandoTocan/Pages/SendMailModEvento.htm
+++ b/CuandoTocan/CuandoTocan/Pages/SendMailModEvento.htm
@@ -16,7 +16,7 @@
    </tr>
     <tr>
       <th style="width:700px" colspan="3">Te enviamos el nuevo detalle del mismo:</th></tr>
-       <th style="height:10px;background-color:#FFFFFF;color:#FFFFFF;font-size:30px;font-weight: bold;" colspan="3"> </th>
+       <th style="height:3px;background-color:#FFFFFF;color:#FFFFFF;font-size:30px;font-weight: bold;" colspan="3"> </th>
       <!--<table style="text-align:center; margin-left:80px;style="text-align:center;Border:1px solid;"">-->
         <tr  style="width:700px;"  >
           <th style="text-align=left;">Evento: [MyEvent]</th>
@@ -30,7 +30,7 @@
          <tr  style="width:700px;"  >
           <th style="text-align=left;">Tipo :[tipo]</th>
         </tr>
-       <tr><th style="height:20px;background-color:#22b573;color:#FFFFFF;font-size:16px;font-weight: bold;" > <a href="http://localhost:63281/Home.aspx" style="color:#FFFFFF;text-decoration:none;"> CuandoTocan</a></th></tr>
+       <tr><th style="height:20px;background-color:#22b573;color:#FFFFFF;font-size:16px;font-weight: bold;" > <a href=[url] style="color:#FFFFFF;text-decoration:none;"> Ver evento</a></th></tr>
 </table>
   
 </body>
