--- a/CuandoTocan/CuandoTocan/Pages/SendMailNewDisco.htm
+++ b/CuandoTocan/CuandoTocan/Pages/SendMailNewDisco.htm
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
    <title>Email</title>
@@ -18,7 +18,7 @@
       <th style="font-size:16px;">Titulo: [titulo]</th></tr>
     <tr><th style="font-size:18px;">Discográfica [discografica] </th></tr>
    <tr><th style="font-size:16px;">Fecha lanzamiento: [fecha]</th></tr>
-  <tr><th style="height:20px;background-color:#22b573;color:#FFFFFF;font-size:16px;font-weight: bold;" > <a href="http://localhost:63281/Home.aspx" style="color:#FFFFFF;text-decoration:none;"> CuandoTocan</a></th></tr>
+  <tr><th style="height:20px;background-color:#22b573;color:#FFFFFF;font-size:16px;font-weight: bold;" > <a href=[url] style="color:#FFFFFF;text-decoration:none;"> Ver Detalle</a></th></tr>
 </table>
   
 </body>
