--- a/CuandoTocan/CuandoTocan/Pages/SendMailNewEvento.htm
+++ b/CuandoTocan/CuandoTocan/Pages/SendMailNewEvento.htm
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
  <title>Email</title>
@@ -19,7 +19,7 @@
     <tr><th style="font-size:18px;">y tendrá lugar en [lugar] </th></tr>
    <tr><th style="font-size:16px;">el [fecha]</th></tr>
    <tr><th style="font-size:16px;">¡No te lo pierdas!</th></tr>
-  <tr><th style="height:20px;background-color:#22b573;color:#FFFFFF;font-size:16px;font-weight: bold;" > <a href="http://localhost:63281/Home.aspx" style="color:#FFFFFF;text-decoration:none;"> CuandoTocan</a></th></tr>
+  <tr><th style="height:20px;background-color:#22b573;color:#FFFFFF;font-size:16px;font-weight: bold;" > <a href=[url] style="color:#FFFFFF;text-decoration:none;"> Ver detalle</a></th></tr>
 </table>
   
 </body>
